# andrei-agent-system

./: .env.example  .gitignore  COSTS.md  DEPLOY_HOSTINGER.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  railway.toml  requirements.txt  run_alerts.py  run_crew.py  run_daily.py  run_discord_bot.py  run_weekly.py
agent-tools/: 76d11456-0805-4a57-a3c9-a5b120b5c674.txt  dc7a26ff-3bae-4624-86c5-5348445e691e.txt
scripts/: deploy_hostinger.sh  diagnose_google_calendar.py  diagnose_google_sheets.py  list_google_calendars.py  local_run.ps1  peek_google_sheets.py  setup_cron_hostinger.sh  setup_google_sheets.py  supabase_schema.sql  test_discord.py  test_discord_bot.py  test_google.py  test_google_sheets.py  test_notion.py  test_telegram.py
src/: __init__.py  bootstrap.py  scheduler.py
src/agents/: __init__.py  definitions.py
src/api/: __init__.py  server.py
src/bot/: __init__.py  ajut_intent.py  (+12 more)
terminals/: 1.txt  10.txt  11.txt  12.txt  13.txt  14.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
tests/: test_ajut_intent.py  test_auto_voiceover.py  test_config.py  test_content_briefing.py  test_discord_context.py  test_discord_research_default.py  test_family_intent.py  test_filmed_intent.py  test_idea_intent.py  test_ideas_list.py  test_job_intent.py  test_notifier.py  test_notion_ideas.py  test_plan_blocks.py  test_posting_plan.py  test_posting_plan_template.py  test_research_intent.py  test_task_reminder.py  test_voice_message.py  test_voiceover.py  test_voiceover_intent.py  test_web_page_reader.py  test_web_search_intent.py
(+36 files in other folders)
