[project]
name = "andreia-agent-system"
version = "1.0.0"
description = "Multi-agent AI system for Andrei - CrewAI + LangGraph"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]